# lola-eval

./: .containerignore  .gitignore  AGENTS.md  README.md  Taskfile.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  vitest.config.js
docs/: walkthrough.md
examples/: lola-eval.yaml
packaging/: versions.txt
packaging/rpm/: Containerfile  build.sh  lola-eval.spec
packs/: SCHEMA.md
src/lola_eval/: __init__.py  __main__.py  ansi_html.py  ci.py  compare.py  config.py  doctor.py  fingerprint.py  graph.py  judge.py  judge_client.py  markdown_report.py  math.py  profile.py  report.py  runner.py  store.py  threshold.py  xdg.py
tests/bats/: install_pack.bats  reset.bats  reset_validation.bats
tests/container/: Containerfile  run.sh
tests/integration/: test_e2e_fakes.py  test_history_seed.py  test_lola_eval_test.py
tests/node/: claude_code_provider.test.js  envelope.test.js  git_helpers.test.js  model_resolver.test.js  opencode_provider.test.js  path_sanitization.test.js  profile_setup.test.js  spawn.test.js  streamjson.test.js  tool_registry.test.js
tests/python/: test_ansi_html.py  test_ci.py  test_clean_cmd.py  test_cli_skeleton.py  test_compare.py  test_config.py  test_doctor.py  test_doctor_cmd.py  test_doctor_e2e.py  test_fingerprint.py  test_graph.py  test_init_cmd.py  test_interactive_orchestrator.py  test_judge_client.py  test_judge_timeout.py  test_markdown_report.py  test_math.py  test_multi_judge.py  test_profile.py  test_report.py  test_runner_interactive.py  test_runner_subprocess.py  test_schema_migration.py  test_store.py  (+6 more)
(+62 files in other folders)
