[project]
name = "lola-eval"
version = "0.2.0"
description = "Embeddable agent eval runner for lola packs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "plotext>=5.3,<6",
    "pydantic>=2.0,<3",
    "junit-xml>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
lola-eval = "lola_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lola_eval"]
# Hatchling's default include rules ship .py files only. Explicitly include
# every file under _data/ so providers (.js), orchestrator (.sh), example
# fixtures (.md/.yaml/.txt), and the trajectory judge (.py) all land in the
# wheel.
artifacts = [
  "src/lola_eval/_data/**",
]

[tool.pytest.ini_options]
testpaths = ["tests/python", "tests/integration"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests that spawn real subprocesses (slow)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Example starter code under _data/examples/ contains intentional bugs that
# users review with lola-eval — bare excepts, mutable defaults, etc. Don't
# lint it.
extend-exclude = ["src/lola_eval/_data/examples/"]

[dependency-groups]
dev = [
    "build>=1.5.0",
]
